--- a/src/RideShare.Application/RideShare.Application.csproj
+++ b/src/RideShare.Application/RideShare.Application.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\RideShare.Domain\RideShare.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.1.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
