--- a/src/RideShare.Infrastructure/RideShare.Infrastructure.csproj
+++ b/src/RideShare.Infrastructure/RideShare.Infrastructure.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\RideShare.Application\RideShare.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
