--- a/src/RideShare.Api/appsettings.Development.json
+++ b/src/RideShare.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "RideShareConnectionString": "Server=localhost,6433; Initial Catalog=RideShare; User Id=sa; Password=A!b2c3€4;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
