🏗️ ddd value object applied to travel plan

--- a/src/RideShare.Api/appsettings.Development.json
+++ b/src/RideShare.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "RideShareConnectionString": "Server=localhost,6433; Initial Catalog=RideShare; User Id=sa; Password=A!b2c3€4;"
+    "RideShareConnectionString": "Server=localhost,6433; Initial Catalog=RideShare; User Id=sa; Password=A!b2c3€4; Trust Server Certificate=true;"
   },
   "Logging": {
     "LogLevel": {
