--- a/src/RideShare.Domain/RideShare.Domain.csproj
+++ b/src/RideShare.Domain/RideShare.Domain.csproj
@@ -7,4 +7,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+
+
+  <ItemGroup>
+    <PackageReference Include="Ardalis.Specification" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
